<resources>
    <string name="app_name">Beboard</string>
    <string name="go_key">Go</string>
    <string name="next_key">Next</string>
    <string name="send_key">Send</string>
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>

    <string name="label_subtype_generic">%s</string>

    <string name="cha">5ɛ̂ɛ̌ɛ́ɛ̄</string>
    <string name="enable">Enable</string>
    <string name="input">Input</string>
    <string name="langues">Langues</string>
    <string name="differentlangues">Fon(bj)</string>
    <string name="themes">Themes</string>
    <string name="About">About</string>
    <string name="settings_name">Beboard Settings</string>
    <string name="elseinputtext">Please enable keyboard first.</string>

    <string name="banner_unitID">ca-app-pub-6404264627814552/8236146819</string>
    <string name="interstitial_unitID">ca-app-pub-6404264627814552/5366440892</string>

    <string name="about_info">Beboard is a complete solution for both Fongbé  Benin national language along with native numbers and symbols.\n\n The application is developed based on alphabet Fongbé, therefore we highly recommend to post your reviews to help us serve you best.\n\nSend us an email at beninkeyboard@gmail.com, if you have any concerns.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mainSettingFragment">MainSettingFragment</string>
    <string name="Themes">Themes</string>
    <string name="Color">Color</string>
    <string name="Image">Image</string>

</resources>
