<?xml version="1.0" encoding="utf-8"?>


<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_name">

    <Preference

        android:title="@string/settings_name" />

    <Preference
        android:icon="@drawable/ic_keyboard_black_24dp"
        android:key="penable"
        android:title="@string/enable" />

    <Preference
        android:key="pinput"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/input" />

    <Preference
        android:icon="@drawable/ic_language_24dp"
        android:key="langues"
        android:title="@string/langues"
        android:summary="@string/differentlangues"/>

    <Preference
        android:icon="@drawable/ic_color_lens_black_24dp"
        android:key="ptheme"
        android:title="@string/themes" />
    <Preference
        android:icon="@drawable/ic_info_black_24dp"
        android:key="pabout"
        android:title="@string/About" />
</PreferenceScreen>